--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,10 @@
-h2{
+.h2{
     text-decoration: underline;
     color: yellow;
+    font-size: 3.2em;
+}
+
+.p{
+    color: rgb(255, 0, 8);
     font-size: 3.2em;
 }
